--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <input id="add2" class="form-control" type="text">
       </div>
       <button type="submit" class="btn">Add</button>
+      <button type="submit" class="btn">Subtract</button>
+      <button type="submit" class="btn">Divide</button>
+      <button type="submit" class="btn">Multiply</button>
     </form>
     <div id="output">
       
