--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h1>Calculator</h1>
     <form id="add">
       <div class="form-group">
-        <label for="add1">1st number:</label>
-        <input id="add1" class="form-control" type="text">
+        <label for="number1">1st number:</label>
+        <input id="number1" class="form-control" type="text">
       </div>
       <div class="form-group">
-        <label for="add2">2nd number:</label>
-        <input id="add2" class="form-control" type="text">
+        <label for="number2">2nd number:</label>
+        <input id="number2" class="form-control" type="text">
       </div>
       <button type="submit" class="btn">Add</button>
       <button type="submit" class="btn">Subtract</button>
