add the radio buttons.

--- a/index.html
+++ b/index.html
@@ -22,14 +22,33 @@
         <label for="number2">2nd number:</label>
         <input id="number2" class="form-control" type="text">
       </div>
-      <button type="submit" class="btn">Add</button>
-      <button type="submit" class="btn">Subtract</button>
-      <button type="submit" class="btn">Divide</button>
-      <button type="submit" class="btn">Multiply</button>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>
+          add
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>
+          subtract
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>
+          multiply
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>
+          divide
+        </label>
+      </div>
+      <button type="submit" class="btn">Go!</button>
     </form>
     <div id="output">
-      
-    </div>
-  </div>
+  </div> 
 </body>
 </html>
