add branching for different operators.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <h1>Calculator</h1>
-    <form id="add">
+    <form id="calculator">
       <div class="form-group">
         <label for="number1">1st number:</label>
         <input id="number1" class="form-control" type="text">
