add final code after refactor.

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="operator" value="add" checked>
+          <input type="radio" name="operator" value="subtract">
           subtract
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="operator" value="add" checked>
+          <input type="radio" name="operator" value="multiply">
           multiply
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="operator" value="add" checked>
+          <input type="radio" name="operator" value="divide">
           divide
         </label>
       </div>
